src/test/resources/validation/error/implicitJoinViaExistentThenNonExistentPath/schema.graphqls
type Query {
  customer(id: ID!): Customer
}

type Customer @table {
  id: ID!
  #there is no path from COUNTRY to FILM
  films: [Film!]! @splitQuery @reference(via: [{table: "ADDRESS"}, {table: "CITY"}, {table: "COUNTRY"}  {table: "FILM"}])
}


type Film @table {
  id: ID!
}

